syntax = "proto3";

package protocolbuffer;

option go_package="primenumber/protocolbuffer";

message PrimeNumber {
    int32 number = 1;
}


message PrimeNumberRequest {
    PrimeNumber primeNumber = 1;
}

message PrimeNumberManyTimesResponse {
    int32 result = 1;
}

service PrimeNumberService {
    
    //Server Streaming
    rpc PrimeNumberDeComposition(PrimeNumberRequest) returns (stream PrimeNumberManyTimesResponse) {};
}